@@ -504,7 +504,7 @@ bool Ainst_ok(const assignment &a, unsigned short int i, const G_t &G, const I_t
           OP_KEY (IC_RESULT (ic)) == OP_KEY (IC_LEFT (ic)))
         return(true);
 
-      if(ic->op == '=' && !POINTER_SET (ic) && isOperandEqual(IC_RESULT(ic), IC_RIGHT(ic)))
+      if((ic->op == '=' || ic->op == CAST) && !POINTER_SET (ic) && isOperandEqual(IC_RESULT(ic), IC_RIGHT(ic)))
         return(true);
 
       if(ic->op == GOTO || ic->op == LABEL)
@@ -520,7 +520,7 @@ bool Ainst_ok(const assignment &a, unsigned short int i, const G_t &G, const I_t
     {
       if(ic->op != IFX &&
         !((ic->op == RIGHT_OP || ic->op == LEFT_OP) && (IS_OP_LITERAL(IC_RIGHT(ic)) || operand_in_reg(IC_RIGHT(ic), REG_A, ia, i, G))) &&
-        !(ic->op == '=' && !(IY_RESERVED && POINTER_SET(ic))) &&
+        !((ic->op == '=' || ic->op == CAST) && !(IY_RESERVED && POINTER_SET(ic))) &&
         !IS_BITWISE_OP (ic) &&
         !(ic->op == '~') &&
         !(ic->op == '*' && IS_ITEMP(IC_LEFT(ic)) && IS_ITEMP(IC_RIGHT(ic))) &&
@@ -650,7 +650,8 @@ bool HLinst_ok(const assignment &a, unsigned short int i, const G_t &G, const I_
        ic->op == GET_VALUE_AT_ADDRESS ||
        ic->op == '+' ||
        ic->op == '*' ||
-       ic->op == '='))
+       ic->op == '=' ||
+       ic->op == CAST))
     return(true);
 
   if(IC_RESULT(ic) && IS_SYMOP(result) && isOperandInDirSpace(IC_RESULT(ic)))
@@ -677,7 +678,7 @@ bool HLinst_ok(const assignment &a, unsigned short int i, const G_t &G, const I_
   if((!POINTER_SET(ic) && !POINTER_GET(ic) && (
         (ic->op == '=' ||
          ic->op == CAST ||
-         /*ic->op == UNARYMINUS ||*/
+         ic->op == UNARYMINUS ||
          ic->op == RIGHT_OP ||
          /*ic->op == '-' ||*/
          IS_BITWISE_OP(ic) ||
@@ -698,10 +699,10 @@ bool HLinst_ok(const assignment &a, unsigned short int i, const G_t &G, const I_
   if(result_only_HL && (ic->op == CALL || ic->op == PCALL))
     return(true);
 
-  if(ic->op == '=' && POINTER_SET(ic) && !result_only_HL)	// loads result pointer into (hl) first.
+  if((ic->op == '=' || ic->op == CAST) && POINTER_SET(ic) && !result_only_HL)	// loads result pointer into (hl) first.
     return(false);
 
-  if(ic->op == '=' && !POINTER_GET(ic) && !input_in_HL)
+  if((ic->op == '=' || ic->op == CAST) && !POINTER_GET(ic) && !input_in_HL)
     return(true);
 
 #if 0
@@ -797,6 +798,7 @@ bool IYinst_ok(const assignment &a, unsigned short int i, const G_t &G, const I_
 
   if(result_in_IY &&
     (ic->op == '=' ||
+    ic->op == CAST && getSize(operandType(IC_RESULT(ic))) <= getSize(operandType(IC_RIGHT(ic))) || 
     ic->op == '+')) // todo: More instructions that can write iy.
     return(true);
 
@@ -817,7 +819,9 @@ bool IYinst_ok(const assignment &a, unsigned short int i, const G_t &G, const I_
     !(IC_LEFT(ic) && isOperandInDirSpace(IC_LEFT(ic))))
     return(true);
 
-  if(!result_in_IY && !input_in_IY && ic->op == '=' && operand_is_pair(IC_RESULT(ic), a, i, G))	// DirSpace access won't use iy here.
+  if(!result_in_IY && !input_in_IY &&
+    (ic->op == '=' || ic->op == CAST && (getSize(operandType(IC_RESULT (ic))) <= getSize(operandType(IC_RIGHT (ic))) || !IS_SPEC(operandType(IC_RIGHT (ic))) || SPEC_USIGN(operandType(IC_RIGHT(ic))))) &&
+    operand_is_pair(IC_RESULT(ic), a, i, G))	// DirSpace access won't use iy here.
     return(true);
 
   if(ic->op == IPUSH)	// todo: More instructions that can use IY.
@@ -828,6 +832,7 @@ bool IYinst_ok(const assignment &a, unsigned short int i, const G_t &G, const I_
 
   if(input_in_IY && !result_in_IY &&
     (ic->op == '=' && !POINTER_SET(ic) ||
+     ic->op == CAST && getSize(operandType(IC_RESULT(ic))) <= getSize(operandType(IC_RIGHT(ic))) ||
      ic->op == GET_VALUE_AT_ADDRESS))
     return(true);
 
