@@ -1,5 +1,11 @@
 2011-09-28 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/z80/ralloc2.cc,
+	  src/z80/gen.c:
+	  Handle the trivial casts more like assignments, allow hl in operands for unary minus.
+
+2011-09-28 Philipp Klaus Krause <pkk AT spth.de>
+
 	* ChangeLog:
 	  Reconstruct ChangeLog entries lost during the z180 branch merge.
 
